[package]
name = "rpack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
memoffset = "0.8"
goblin = "0.6"
windows-sys = "0.45.0"
windows-metadata = "0.44.0"
pelite = "0.10.0"
[dependencies.windows]
version = "0.44.0"
features = ["Data_Xml_Dom", "Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"]
